# html2text

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/html2text/: __init__.py  extractor.py
tests/: test_html_extractor.py
